grammars/tree-sitter-cisco_ios/test/corpus/async-bootp.txt
===
async-bootp
===

!
! version 26.1.0
!
async-bootp bootfile :172.30.1.1 "pcboot"
!

---

(configuration_file
  (running_version)
  (async_bootp_section
    (async_bootp_tag)
    (async_bootp_hostname)
    (async_bootp_data)
  )
)
