grammars/tree-sitter-cisco_ios/test/corpus/line.txt
===
activation-character
===

!
! version 26.1.0
!
line console
   activation-character 127
!

---

(config
  (running_version)
  (line_section
    (line_type)
    (activation_character
      (ascii_value))))
